cmake_minimum_required(VERSION 3.17)
project(baekjoon_oj)

set(CMAKE_CXX_STANDARD 20)

add_executable(02309_seven_dwarfs 02309_seven_dwarfs.cpp)
add_executable(02580_sudoku 02580_sudoku.cpp)
add_executable(14888_insert_operators 14888_insert_operators.cpp)
add_executable(14889_start_vs_link 14889_start_vs_link.cpp)
add_executable(11047_coins_0 11047_coins_0.cpp)
add_executable(01931_conference_room_reservation 01931_conference_room_reservation.cpp)
add_executable(11399_atm 11399_atm.cpp)
add_executable(01541_missing_brackets 01541_missing_brackets.cpp)
add_executable(06549_largest_rectangle_in_histogram 06549_largest_rectangle_in_histogram.cpp)
add_executable(02630_colored_paper_pieces 02630_colored_paper_pieces.cpp)
add_executable(01992_quadtree 01992_quadtree.cpp)
add_executable(01780_number_of_paper_pieces 01780_number_of_paper_pieces.cpp)
add_executable(01629_power 01629_power.cpp)
add_executable(11401_binomial_coefficient_3 11401_binomial_coefficient_3.cpp)
add_executable(02740_matrix_multiplication 02740_matrix_multiplication.cpp)
add_executable(10830_power_matrix 10830_power_matrix.cpp)
add_executable(02749_fibonacci_3 02749_fibonacci_3.cpp)
add_executable(02261_nearest_two_points 02261_nearest_two_points.cpp)
add_executable(05086_factor_or_multiple 05086_factor_or_multiple.cpp)
add_executable(01037_factors 01037_factors.cpp)
add_executable(11653_factorize 11653_factorize.cpp)
add_executable(02609_gcd_and_lcm 02609_gcd_and_lcm.cpp)
add_executable(02981_inspection 02981_inspection.cpp)
add_executable(03036_rings 03036_rings.cpp)
add_executable(01676_zeros_until_first_nonzero_in_factorial 01676_zeros_until_first_nonzero_in_factorial.cpp)
add_executable(02004_zeros_in_combination 02004_zeros_in_combination.cpp)
add_executable(09375_fashion_king 09375_fashion_king.cpp)
add_executable(10828_stack 10828_stack.cpp)
add_executable(10773_zeroize_last 10773_zeroize_last.cpp)
add_executable(01725_histogram 01725_histogram.cpp)
add_executable(09012_vps 09012_vps.cpp)
add_executable(04949_balanced_world 04949_balanced_world.cpp)
add_executable(01874_stack_sequence 01874_stack_sequence.cpp)
add_executable(02475_verification_number 02475_verification_number.cpp)
add_executable(18258_queue_2 18258_queue_2.cpp)
add_executable(15576_large_multiplication_2 15576_large_multiplication_2.cpp)
add_executable(02164_cards_2 02164_cards_2.cpp)
add_executable(11866_josephus_problem_0 11866_josephus_problem_0.cpp)
add_executable(01966_printer 01966_printer.cpp)
add_executable(10866_deque 10866_deque.cpp)
add_executable(01021_rotating_queue 01021_rotating_queue.cpp)
add_executable(05430_ac 05430_ac.cpp)
add_executable(05015_ls 05015_ls.cpp)
add_executable(10826_fibonacci_4 10826_fibonacci_4.cpp)
add_executable(01149_rgb_street 01149_rgb_street.cpp)
add_executable(01932_integer_triangle 01932_integer_triangle.cpp)
add_executable(02579_stair_up 02579_stair_up.cpp)
add_executable(01463_make_one 01463_make_one.cpp)
add_executable(10844_staircase_number_easy 10844_staircase_number_easy.cpp)
add_executable(02156_wine_taster 02156_wine_taster.cpp)
add_executable(11053_longest_increasing_subsequence 11053_longest_increasing_subsequence.cpp)
add_executable(11054_longest_bitonic_subsequence 11054_longest_bitonic_subsequence.cpp)
add_executable(02565_electric_wires 02565_electric_wires.cpp)
add_executable(09251_lcs 09251_lcs.cpp)
add_executable(01912_continuous_sum 01912_continuous_sum.cpp)
add_executable(12865_knapsack 12865_knapsack.cpp)
add_executable(09095_add_one_two_three 09095_add_one_two_three.cpp)
add_executable(02193_pinary_numbers 02193_pinary_numbers.cpp)
add_executable(11727_2xn_tiling_2 11727_2xn_tiling_2.cpp)
add_executable(14501_resignation 14501_resignation.cpp)
add_executable(11052_buying_cardpacks 11052_buying_cardpacks.cpp)
add_executable(09465_stickers 09465_stickers.cpp)
add_executable(01010_construct_bridges 01010_construct_bridges.cpp)
add_executable(11057_ascending_numbers 11057_ascending_numbers.cpp)
add_executable(19699_sonanda 19699_sonanda.cpp)
add_executable(11725_who_s_your_parent 11725_who_s_your_parent.cpp)
add_executable(01167_diameter_of_tree 01167_diameter_of_tree.cpp)
add_executable(01967_diameter_of_tree_vip 01967_diameter_of_tree_vip.cpp)
add_executable(01991_tree_traversal 01991_tree_traversal.cpp)
add_executable(02263_preorder_inference 02263_preorder_inference.cpp)
add_executable(05639_postorder_inference_in_bst 05639_postorder_inference_in_bst.cpp)
add_executable(02342_dance_dance_revolution 02342_dance_dance_revolution.cpp)
add_executable(01920_search_number 01920_search_number.cpp)
add_executable(10815_number_cards 10815_number_cards.cpp)
add_executable(10816_number_cards_2 10816_number_cards_2.cpp)
add_executable(01654_cable_cropping 01654_cable_cropping.cpp)
add_executable(02805_woodcutter 02805_woodcutter.cpp)
add_executable(02110_installing_routers 02110_installing_routers.cpp)
add_executable(01300_k_th_number 01300_k_th_number.cpp)
add_executable(01259_palindrome_number 01259_palindrome_number.cpp)
add_executable(15829_hashing 15829_hashing.cpp)
add_executable(18111_minecraft 18111_minecraft.cpp)
add_executable(12015_longest_increasing_subsequence_2 12015_longest_increasing_subsequence_2.cpp)
add_executable(09663_n_queen 09663_n_queen.cpp)
add_executable(11279_max_heap 11279_max_heap.cpp)
add_executable(01927_min_heap 01927_min_heap.cpp)
add_executable(11286_absolute_min_heap 11286_absolute_min_heap.cpp)
add_executable(01655_say_median 01655_say_median.cpp)
add_executable(02293_coins 02293_coins.cpp)
add_executable(01699_sum_of_squares 01699_sum_of_squares.cpp)
add_executable(11066_merge_files 11066_merge_files.cpp)
add_executable(17404_rgb_street_2 17404_rgb_street_2.cpp)
add_executable(09093_reverse_words 09093_reverse_words.cpp)
add_executable(01406_editor 01406_editor.cpp)
add_executable(17413_reverse_words_2 17413_reverse_words_2.cpp)
add_executable(10799_iron_rods 10799_iron_rods.cpp)
add_executable(11758_ccw 11758_ccw.cpp)
add_executable(16194_buying_cardpacks_2 16194_buying_cardpacks_2.cpp)
add_executable(01309_zoo 01309_zoo.cpp)
add_executable(02225_divisions 02225_divisions.cpp)
add_executable(15990_add_one_two_three_5 15990_add_one_two_three_5.cpp)
add_executable(15988_add_one_two_three_3 15988_add_one_two_three_3.cpp)
add_executable(01016_ibs_numbers 01016_ibs_numbers.cpp)
add_executable(01004_le_petit_prince 01004_le_petit_prince.cpp)
add_executable(17298_nge 17298_nge.cpp)
add_executable(17299_ngf 17299_ngf.cpp)
add_executable(01935_postfix_2 01935_postfix_2.cpp)
add_executable(01918_postfix 01918_postfix.cpp)
add_executable(10808_count_alphabets 10808_count_alphabets.cpp)
add_executable(10820_string_analysis 10820_string_analysis.cpp)
add_executable(02743_word_length 02743_word_length.cpp)
add_executable(11655_rot13 11655_rot13.cpp)
add_executable(10824_four_numbers 10824_four_numbers.cpp)
add_executable(11656_suffix_dictionary 11656_suffix_dictionary.cpp)
add_executable(06588_goldbach_s_conjecture 06588_goldbach_s_conjecture.cpp)
add_executable(09613_gcd_sum.cpp 09613_gcd_sum.cpp)
add_executable(17087_hide_and_seek_6 17087_hide_and_seek_6.cpp)
add_executable(01373_binary_to_octal 01373_binary_to_octal.cpp)
add_executable(01212_octal_to_binary 01212_octal_to_binary.cpp)
add_executable(02089_minus_binary 02089_minus_binary.cpp)
add_executable(17103_goldbach_partitions 17103_goldbach_partitions.cpp)
add_executable(11005_base_transformation_2 11005_base_transformation_2.cpp)
add_executable(02745_base_transformation 02745_base_transformation.cpp)
add_executable(11576_base_conversion 11576_base_conversion.cpp)
add_executable(02133_filling_tiles 02133_filling_tiles.cpp)
add_executable(14002_longest_increasing_subsequence_4 14002_longest_increasing_subsequence_4.cpp)
add_executable(11055_largest_increasing_subsequence 11055_largest_increasing_subsequence.cpp)
add_executable(13398_continuous_sum_2 13398_continuous_sum_2.cpp)
add_executable(03085_bomboni 03085_bomboni.cpp)
add_executable(01476_year_calculation 01476_year_calculation.cpp)
add_executable(01107_remote_controller 01107_remote_controller.cpp)
add_executable(14500_tetromino 14500_tetromino.cpp)
add_executable(01748_continue_writing_numbers 01748_continue_writing_numbers.cpp)
add_executable(15654_n_and_m_5 15654_n_and_m_5.cpp)
add_executable(15655_n_and_m_6 15655_n_and_m_6.cpp)
add_executable(15656_n_and_m_7 15656_n_and_m_7.cpp)
add_executable(15657_n_and_m_8 15657_n_and_m_8.cpp)
add_executable(06064_cain_calendar 06064_cain_calendar.cpp)
add_executable(15663_n_and_m_9 15663_n_and_m_9.cpp)
add_executable(15649_n_and_m 15649_n_and_m.cpp)
add_executable(15650_n_and_m_2 15650_n_and_m_2.cpp)
add_executable(15651_n_and_m_3 15651_n_and_m_3.cpp)
add_executable(15652_n_and_m_4 15652_n_and_m_4.cpp)
add_executable(15664_n_and_m_10 15664_n_and_m_10.cpp)
add_executable(15665_n_and_m_11 15665_n_and_m_11.cpp)
add_executable(15666_n_and_m_12 15666_n_and_m_12.cpp)
add_executable(10972_next_permutation 10972_next_permutation.cpp)
add_executable(10973_previous_permutation 10973_previous_permutation.cpp)
add_executable(10974_all_permutations 10974_all_permutations.cpp)
add_executable(10819_maximize_differences 10819_maximize_differences.cpp)
add_executable(10971_traveling_salesman_2 10971_traveling_salesman_2.cpp)
add_executable(06063_lotto 06063_lotto.cpp)
add_executable(01759_making_password 01759_making_password.cpp)
add_executable(15661_link_vs_start 15661_link_vs_start.cpp)
add_executable(02529_inequality_signs 02529_inequality_signs.cpp)
add_executable(01248_guess 01248_guess.cpp)
add_executable(11723_set 11723_set.cpp)
add_executable(01182_sum_of_subsequence 01182_sum_of_subsequence.cpp)
add_executable(14391_paper_pieces 14391_paper_pieces.cpp)
add_executable(16922_roman_numerals 16922_roman_numerals.cpp)
add_executable(13023_abcde 13023_abcde.cpp)
add_executable(01260_dfs_and_bfs 01260_dfs_and_bfs.cpp)
add_executable(02011_alphacode 02011_alphacode.cpp)
add_executable(02440_star_picture_3 02440_star_picture_3.cpp)
add_executable(02558_a_plus_b_2 02558_a_plus_b_2.cpp)
add_executable(02441_star_picture_4 02441_star_picture_4.cpp)
add_executable(01924_2007 01924_2007.cpp)
add_executable(11718_echo 11718_echo.cpp)
add_executable(11724_connected_components 11724_connected_components.cpp)